# rbac

./: Cargo.toml  Config.toml  build.sh
artifacts/: rbac.wasm
provider/: Cargo.toml  Config.toml
provider/src/: errors.rs  main.rs  storage_api.rs
src/: main.rs
verifier/: Cargo.toml  Config.toml
verifier/src/: main.rs
