[package]
name = "rbac_provider"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"

[[bin]]
name = "rbac_provider"
path = "src/main.rs"

[dependencies]
fluence = { git = "https://github.com/fluencelabs/rust-sdk", features = ["logger"] }
log = "0.4.11"
once_cell = "1.5.2"
anyhow = "1.0.31"
boolinator = "2.4.0"
fce-sqlite-connector = "=0.1.3"